packages/components/src/Surfaces/FooterInternationalContents/index.module.css
.flex-row {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 8px;
  padding: 4px 0;
}

.flex-row>svg>path {
  stroke: var(--theme-secondary) !important;
  stroke-width: 1;
}

.footer-contact-button {
  color: var(--theme-secondary);
}

.footer-columns {
  grid-area: columns;
  display: grid;
  grid-template-columns: repeat(2, auto);
  margin-top: clamp(1rem, 1.0582010582vw, 1.33rem);
  align-self: center;
  pointer-events: none;
  font-size: 1rem;
  line-height: 1.5294117647;
  grid-gap: 3.125rem;
  gap: 3.125rem;
  justify-items: flex-start;
  grid-template-columns: repeat(2, 1fr);
}

@media (min-width: 992px) {
  .footer-columns {
    margin-bottom: clamp(5.625rem, 5.9523809524vw, 7.48125rem);
  }
}

@media (min-width: 1200px) {
  .footer-columns {
    grid-template-columns: repeat(3, 1fr);
    grid-column: 1 / span 2;
    justify-self: flex-start;
    gap: clamp(1.875rem, 1.9841269841vw, 2.49375rem) clamp(4.375rem, 4.6296296296vw, 5.81875rem);
    font-size: clamp(1.0625rem, 1.1243386243vw, 1.413125rem);
  }
}

@media (min-width: 1400px) {
  .footer-columns {
    grid-template-columns: repeat(4, auto);
  }
}

.footer-columns__globally {
  display: flex;
  align-items: center;
  margin-bottom: 0.2em;
  gap: 0.5em;
}

.footer-columns__globally svg {
  min-width: 1em;
  height: auto;
}

.footer-columns__globally h3 {
  margin-top: 0;
}

.footer-columns__column {
  pointer-events: all;
}

@media (max-width: 1399px) {
  .footer-columns__column--initial {
    grid-column: span 2;
  }
}

.footer-columns__column h3 {
  margin-bottom: 0.125rem;
  font-size: inherit;
  line-height: inherit;
  color: inherit;
}

.footer-columns__column address {
  font-style: normal;
  opacity: 0.5;
}

@media (min-width: 992px) {
  .footer-columns__column address {
    white-space: pre-line;
  }
}

.footer-columns__column a {
  display: flex;
  align-items: center;
  color: inherit;
  -webkit-text-decoration-color: transparent;
  text-decoration-color: transparent;
  transition: -webkit-text-decoration 0.2s ease-in-out;
  transition: text-decoration 0.2s ease-in-out;
  transition:
    text-decoration 0.2s ease-in-out,
    -webkit-text-decoration 0.2s ease-in-out;
}

@media (hover: hover) {
  .footer-columns__column a:hover {
    -webkit-text-decoration-color: inherit;
    text-decoration-color: inherit;
  }
}

.footer-columns__column a:focus-visible {
  -webkit-text-decoration-color: inherit;
  text-decoration-color: inherit;
}

@media (min-width: 1200px) and (max-width: 1399px) {
  .footer-columns__column--address {
    grid-row: 2;
  }
}

.footer-columns__column--email {
  transition: opacity 0.4s;
  gap: 0.5rem;
}

.footer-columns__column--email svg {
  transform: rotate(-45deg);
}

.footer-columns__column--email:not(:hover):not(:focus) {
  opacity: 0.5;
}

.footer-bottom {
  grid-area: bottom;
  margin-top: clamp(0.5rem, 0.5291005291vw, 0.665rem);
  border-top: 1px solid var(--theme-primary);
  transition: border-color 0.4s;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1.875rem;
  font-size: clamp(0.7625rem, 0.8097883598vw, 0.930625rem);
  padding-top: 3.75rem;
}

@media (min-width: 992px) {
  .footer-bottom {
    margin-top: 0;
    flex-direction: row;
    padding: clamp(1.875rem, 1.9841269841vw, 2.49375rem) 0;
    gap: clamp(2.875rem, 3.0423280423vw, 3.82375rem);
  }
}

.footer-legal {
  display: flex;
  align-items: center;
  gap: clamp(1rem, 1.0582010582vw, 1.33rem);
}

.footer-legal a {
  color: inherit;
}

.footer-legal span {
  color: var(--theme-secondary);
  opacity: 0.5;
}

.footer-socials {
  font-size: clamp(0.7625rem, 0.8097883598vw, 0.930625rem);
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto auto;
  list-style: none;
  margin: 0;
  padding: 0;
  gap: clamp(0.2rem, 0.5291005291vw, 0.665rem);
  justify-items: center;
  align-items: center;
  display: flex;
}

@media (min-width: 992px) {
  .footer-socials {
    margin-left: auto;
  }
}

.footer-socials__item {
  display: flex;
  align-items: center;
  gap: inherit;
}

.footer-socials__item:nth-child(4) {
  grid-column: 2 / 3;
  grid-row: 2;
}

.footer-socials .footer-socials__link {
  --background-color: transparent;
  --text-color: var(--theme-secondary);
}

@media (hover: hover) {
  .footer-socials .footer-socials__link:hover {
    --background-color: var(--theme-primary);
    --text-color: var(--theme-secondary);
  }
}

.footer-socials .footer-socials__link:focus-visible {
  --background-color: var(--theme-primary);
  --text-color: var(--theme-secondary);
}

.footer-socials .footer-socials__link s {
  opacity: 0.5;
}

.footer-socials__separator {
  color: var(--theme-primary);
  transition: color 0.4s;
}

.acknowledgement-modal {
  background-color: #000;
  color: hsla(0, 0%, 100%, 0.3);
  display: flex;
  align-items: center;
  justify-content: center;
  align-self: stretch;
  margin: 0;
  padding: 0;
}

.acknowledgement-modal-wrapper {
  padding: clamp(0.9375rem, 1.953125vw, 1.246875rem);
}

@media (min-width: 992px) {
  .acknowledgement-modal-wrapper {
    padding: clamp(1.875rem, 1.9841269841vw, 2.49375rem);
  }
}

.acknowledgement-modal ::selection {
  background-color: #ca0000;
  color: #ffe600;
}

.acknowledgement-modal em {
  font-style: normal;
  color: #fff;
}

.acknowledgement-modal__content {
  max-width: calc(clamp(68.75rem, 72.7513227513vw, 91.4375rem) + var(--container-gutter) * 2);
  padding-left: var(--container-gutter);
  padding-right: var(--container-gutter);
  margin-left: auto;
  margin-right: auto;
  width: 100%;
  --container-gutter: clamp(1.875rem, 1.9841269841vw, 2.49375rem);
  font-size: clamp(1.875rem, 3.90625vw, 2.49375rem);
  line-height: 1.1666666667;
  font-weight: 500;
}

@media (min-width: 768px) {
  .acknowledgement-modal__content {
    --container-gutter: clamp(3.75rem, 3.9682539683vw, 4.9875rem);
  }
}

@media (min-width: 992px) {
  .acknowledgement-modal__content {
    font-size: clamp(3.75rem, 3.9682539683vw, 4.9875rem);
  }
}

